--- a/investsmart/main/templates/main/asset_news.html
+++ b/investsmart/main/templates/main/asset_news.html
@@ -15,7 +15,7 @@
 					<p style="font-size:60%" > Published on {{ news.published_date }}</p>
 					<br>
 					<a href="{{ news.url }}">Go to the Source: {{ news.publisher|safe }}</a>
-					<p>{{news.description|safe}}</p>
+					<p>{{news.summary|safe}}</p>
 				</div>
 			</div>
 		</a>
